# gc-tracker-fr

./: .gitignore  README.md  main.py  main_old.py  pyproject.toml  streamlit.py  urls.yml
src/: discord.py  logger.py  postgresql.py  spreadsheet.py  utils.py  websites_rules.py
src/config/: config.yml  tests.yml  urls.yml
