[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gc-tracker-fr"
version = "2025.04.04"
description = "A tool designed to monitor the availability and prices of graphics cards."
authors = [
    { name = "Kevin FISCHER", email = "mr.kevin.fischer@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "gspread",
    "oauth2client",
    "requests",
    "beautifulsoup4",
    "playwright",
    "playwright-stealth",
    "setuptools",
    "colorama",
]

[project.optional-dependencies]
dev = [
    "black",
]
